  information will be very useful because it will list
  all the strings which were updated or added. If you
  encounter a modified string, please look in the 
  reference (english) file to see if you existing
  translation is still valid and update if appropriate.

  [U] = updated, [+] = added, [-] = removed

  ====================================================

  02-03-2003 - settings
    [u] strConfigLockedDetected
    [+] strFixProblemsBefore
    [+] strFixProblemsAfter

  02-02-2003 - default
    [+] strErrorDBPlain
    [+] strErrorDBSerious
    [+] strErrorDBNoDataPlain
    [+] strErrorDBNoDataSerious
    [+] strErrorDBCorrupt
    [+] strErrorDBContact
    [+] strErrorDBSubmitBug

  01-21-2003 - default
    [u] strDuplicateClientName
    [+] strInvalidPassword
    [+] strNotSamePasswords
    [+] strRepeatPassword
    [+] strOldPassword
    [+] strNewPassword

  01-21-2003 - settings
    [-] strInvalidPassword
    [-] strNotSamePasswords
    [-] strRepeatPassword
    [-] strOldPassword
    [-] strNewPassword

  01-15-2003 - settings
    [+] strUpdateError
    [+] strUpdateDatabaseError
    [+] strIgnoreErrors
    [+] strRetryUpdate

  01-12-2003 - maintenance
    [u] strForUpdatesLookOnWebsite
    [+] strCurrentlyUsing
    [+] strRunningOn
    [+] strAndPlain

  01-07-2003 - settings
    [u] strAdminEmailHeaders
    [u] strWarnLimit
    [u] strWarnLimitErr
    [u] strWarnAdmin
    [u] strWarnClient  

  01-05-2003 - settings
    [+] strGeotrackingLocationError
    [+] strMyHeaderError
    [+] strMyFooterError
    [u] strMyHeader
    [u] strMyFooter  

  01-03-2003 - default
    [+] strConfirmResetCampaignStats

  12-27-2002 - maintenance
    [+] strDeliveryCacheFiles

  12-18-2002 - settings
    [+] strDbLocal (Postgres only)

  12-17-2002 - settings
    [+] strDbPort

  12-16-2002 - settings
    [+] strTableWrongType
    [+] strTypeFTPErrorDir
    [+] strTypeFTPErrorConnect
    [+] strTypeFTPErrorHost
    [+] strTypeDirError

  12-15-2002 - settings